--- a/backend/package.json
+++ b/backend/package.json
@@ -17,10 +17,10 @@
     "@types/node": "^20.4.0",
     "concurrently": "^8.2.0",
     "nodemon": "^2.0.22",
-    "ts-loader": "^9.4.4",
-    "typescript": "^5.1.6",
-    "webpack": "^5.88.1",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "typescript": "^5.1.6"
+  },
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2"
   }
 }
