--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "npx tsc",
     "start": "node dist/index.ts",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
@@ -13,19 +13,22 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.2",
+    "@types/node": "^20.4.0",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
+    "concurrently": "^8.2.0",
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard-with-typescript": "^36.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
-    "prettier": "^3.0.0",
-    "ts-loader": "^9.4.4",
-    "@types/express": "^4.17.17",
-    "@types/node": "^20.4.0",
-    "concurrently": "^8.2.0",
+    "jest": "^29.6.1",
     "nodemon": "^2.0.22",
+    "prettier": "^3.0.0",
+    "ts-jest": "^29.1.1",
+    "ts-loader": "^9.4.4",
     "typescript": "^5.1.6"
   },
   "dependencies": {
