--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx tsc",
     "start": "node dist/index.ts",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
+    "prettier": "prettier --write 'src/**/*.{js,ts}'",
+    "lint": "tsc --noEmit && eslint 'src/**/*.{js,ts}' --quiet --fix"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +21,7 @@
     "eslint-config-standard-with-typescript": "^36.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-prettier": "^5.0.0-alpha.2",
     "eslint-plugin-promise": "^6.1.1",
     "prettier": "^3.0.0",
     "ts-loader": "^9.4.4",
