--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "build": "npx tsc",
     "start": "node dist/index.ts",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
-    "prettier": "prettier --write 'src/**/*.{js,ts}'",
+    "format": "prettier --write 'src/**/*.{js,ts}'",
     "lint": "tsc --noEmit && eslint 'src/**/*.{js,ts}' --quiet --fix"
   },
   "keywords": [],
