--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -5,13 +5,11 @@ jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
       - name: install npm
-        uses: npm install
+        run: npm install
       - name: run prettier
-        uses: npm run format
+        run: npm run format
       - name: run eslint
-        uses: npm run lint
+        run: npm run lint
       - name: run jest
-        uses: npm run test
+        run: npm run test
