--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -13,3 +13,11 @@ jobs:
       - name: Install dependencies
         working-directory: ./backend
         run: npm install
+        
+      - name: Run formatter
+      - run: npm run prettie
+      - run: npm run lint
+        
+      - name: Run jest      
+      - run: npm run build --if-present
+      - run: npm test
