--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -15,9 +15,4 @@ jobs:
         run: npm install
         
       - name: Run formatter
-      - run: npm run prettie
-      - run: npm run lint
-        
-      - name: Run jest      
-      - run: npm run build --if-present
-      - run: npm test
+        run: npm run prettie
