--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -13,6 +13,13 @@ jobs:
       - name: Install dependencies
         working-directory: ./backend
         run: npm install
+      - run: npm run build --if-present
+      - run: npm test
         
       - name: Run formatter
+        working-directory: ./backend
         run: npm run prettie
+      
+      - name: Run eslint
+        working-directory: ./backend
+        run: npm run lint
