--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -7,10 +7,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Use Node.js
-      uses: actions/setup-node@v3
+      working-directory: ./backend
+    - uses: actions/setup-node@v3
       with:
         node-version: '16.x'
-        working-directory: ./backend
     - run: npm install
     - run: npm run build --if-present
     - run: npm test
