--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -13,4 +13,10 @@ jobs:
     - run: npm install
       working-directory: ./backend
     - run: npm run build --if-present
+      working-directory: ./backend
     - run: npm test
+      working-directory: ./backend
+    
+    - name: Run formatter
+    - run: npm run formatter
+      working-directory: ./backend
