--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -14,7 +14,9 @@ jobs:
       working-directory: ./backend
     - run: npm run build --if-present
       working-directory: ./backend
-    - run: npm test
+    - run: npm run test
       working-directory: ./backend
-    - run: npm run formatter
+    - run: npm run format
+      working-directory: ./backend
+    - run: npm run lint
       working-directory: ./backend
