--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,6 +1,11 @@
 name: GitHub Actions
 run-name: formatter and jest are running 🚀
-on: [push]
+on: 
+  push:
+    branches:
+      - 'main'
+    tags:
+      - 'Review Me'
 jobs:
   build:
     runs-on: ubuntu-latest
