--- a/backend/package.json
+++ b/backend/package.json
@@ -28,13 +28,14 @@
     "eslint-plugin-prettier": "^5.0.0-alpha.2",
     "eslint-plugin-promise": "^6.1.1",
     "jest": "^29.6.1",
-    "prettier": "^3.0.0",
     "nodemon": "^2.0.22",
+    "prettier": "^3.0.0",
     "ts-jest": "^29.1.1",
     "typescript": "^5.1.6"
   },
   "dependencies": {
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-openapi-validator": "^5.0.4"
   }
 }
