--- a/backend/package.json
+++ b/backend/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "test": "jest",
     "build": "npx tsc",
-    "start": "node dist/index.ts",
+    "start": "node dist/index.js",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
     "format": "prettier --write 'src/**/*.{js,ts}'",
-    "lint": "tsc --noEmit && eslint 'src/**/*.{js,ts}' --quiet --fix"
+    "lint": "tsc --noEmit && eslint 'src/**/*.{js,ts}' --quiet --fix",
+    "swagger": "docker run --rm -p 8080:8080 -e SWAGGER_JSON=/local/openapi.yaml -v ${PWD}:/local swaggerapi/swagger-ui:v3.20.1"
   },
   "keywords": [],
   "author": "",
@@ -36,6 +37,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-openapi-validator": "^5.0.4"
+    "express-openapi-validator": "^5.0.4",
+    "swagger-ui-dist": "^5.1.3"
   }
 }
