--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "jest",
     "build": "npx tsc",
-    "start": "node dist/index.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
+    "start": "ts-node src/index.ts",
+    "dev": "nodemon src/index.ts",
     "format": "prettier --write 'src/**/*.{js,ts}'",
     "lint": "tsc --noEmit && eslint 'src/**/*.{js,ts}' --quiet --fix",
     "swagger": "docker run --rm -p 8080:8080 -e SWAGGER_JSON=/local/openapi.yaml -v ${PWD}:/local swaggerapi/swagger-ui:v3.20.1"
@@ -32,6 +32,7 @@
     "nodemon": "^2.0.22",
     "prettier": "^3.0.0",
     "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
   "dependencies": {
