--- a/backend/package.json
+++ b/backend/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "test": "jest",
     "build": "npx tsc",
-    "start": "node dist/index.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
+    "start": "ts-node src/index.ts",
+    "dev": "nodemon src/index.ts",
     "format": "prettier --write 'src/**/*.{js,ts}'",
     "lint": "tsc --noEmit && eslint 'src/**/*.{js,ts}' --quiet --fix",
-    "swagger": "docker run --rm -p 8080:8080 -e SWAGGER_JSON=/local/openapi.yaml -v ${PWD}:/local swaggerapi/swagger-ui:v3.20.1"
+    "swagger": "cd ../ | docker run --rm -p 8080:8080 -e SWAGGER_JSON=/local/openapi.yaml -v ${PWD}:/local swaggerapi/swagger-ui:v3.20.1"
   },
   "keywords": [],
   "author": "",
@@ -20,7 +20,6 @@
     "@types/jest": "^29.5.2",
     "@types/node": "^20.4.0",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
-    "concurrently": "^8.2.0",
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard-with-typescript": "^36.0.0",
@@ -32,6 +31,7 @@
     "nodemon": "^2.0.22",
     "prettier": "^3.0.0",
     "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
   "dependencies": {
